# cw-kolejki

./: CMakeLists.txt  README.md  code_review.md  kol.cpp  kol.h  main.cpp
kol_test/: kol  opcjeCpp  tester.cpp  tester.sh  tester_cmake.sh
